Add flight support for optionally signing URLs for GCP snapshot exports